# PDF_Tool

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  conanfile.txt  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: async-implementation.md  bugfix-lastpage-restoration.md  compression.md  cpu-bottleneck-fix.md  dark-mode-summary.md  dark-mode.md  design.md  dpi-bottleneck-analysis.md  dpr-and-dual-resolution-explained.md  large-pdf-optimization.md  media_api.md  media_view.md  mediaview-refactor.md  performance-optimization-applied.md  performance-optimization.md  raw-bitmap-optimization.md  raw-highres-aggressive-mode.md  refactor-completion.md  resize-optimization.md  rust-async-analysis.md  settings-refactor.md  settings.md  webp-implementation.md
libraries/PDFUtils/: PDFUtils.cpp  PDFUtils.h
libraries/PDFtoImage/: PDFtoImage.cpp  PDFtoImage.h
libraries/Setting/: Setting.cpp  Setting.h
resource/: resource.qrc
scripts/: fetch-pdfium.mjs  migrate-settings-refs.sh
src/: App.vue  main.cpp  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: entitlements.plist
src-tauri/src/: lib.rs  main.rs  media.rs
src/Widget/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/Widget/PDFView_Widget/: PDFView_Widget.cpp  PDFView_Widget.h  PDFView_Widget.ui
src/Widget/PDFWidget/: PDFWidget.cpp  PDFWidget.h  PDFWidget.ui
src/assets/: tailwind.css
src/components/: AppHeader.vue  ContextMenu.vue  FileListItem.vue  FileListPanel.vue  ImageViewer.vue  ModeChooseList.vue  ModeTabs.vue  PdfViewer.vue  SettingBar.vue
src/components/Compression/: CompressionView.vue
src/components/Compression/parts/: CompressionToolbar.vue  ImageCompressPane.vue  PdfCompressPane.vue
src/components/FileList/: FileList.vue  FileListItem.vue  MediaFileListPane.vue  PdfFileListPane.vue  index.ts  types.ts
src/components/MediaView/: MediaView.old.vue  MediaView.vue
src/components/MediaView/parts/: ImageViewport.vue  MediaToolbar.vue  PdfViewport.vue
src/components/PdfEditor/: PdfEditorView.vue
src/components/Settings/: SettingsNav.vue  SettingsView.vue
src/components/Settings/parts/: ExportSettings.vue  InsertDefaults.vue
src/composables/: persistence.ts  useModeFiles.ts
src/composables/pdfViewer/: usePageHighlights.ts  usePdfViewerEngine.ts
src/composables/viewMode/: useDocumentLoader.ts  useExportTools.ts  usePageContextMenu.ts  usePageHistory.ts  usePdfSearch.ts  useViewerScaling.ts
src/lib/: pdfjs-viewer.ts  pdfjs.ts
src/modules/app/: openFileBridge.ts
src/modules/compress/: settings.ts  store.ts  types.ts
src/modules/export/: settings.ts  types.ts
src/modules/filedrop/: useFileDrop.ts
src/modules/filelist/: store.ts
src/modules/media/: fileSize.ts  openInFileManager.ts  service.ts  store.ts  types.ts  useZoom.ts
src/modules/persist/: json.ts  local.ts
src/modules/settings/: store.ts  types.old.ts  types.ts
src/modules/ui/: store.ts
src/router/: index.ts
src/styles/: them.css
src/types/: pdf.ts  shims-pdfjs-viewer.d.ts  viewer.ts
src/utils/: searchText.ts
src/view/: MediaView.vue
src/views/: ComposeMode.vue  ConvertMode.vue  SettingsView.vue  ViewMode.vue
